--- a/front-end/src/app/admin/navbar/navbar.component.css
+++ b/front-end/src/app/admin/navbar/navbar.component.css
@@ -2,3 +2,9 @@
 {
     border:5px solid #4ca973;
 }
+
+li { color: #ffffff;
+    font-family: 'Trocchi', serif;
+     font-size: 15px;
+    font-weight: normal;
+    line-height: 38px; margin: 0; }
