--- a/front-end/src/app/admin/units/units.component.css
+++ b/front-end/src/app/admin/units/units.component.css
@@ -14,7 +14,7 @@ h3 { color: #7c795d;
 
 th{color: #7c795d;
     font-family: 'Trocchi', serif;
-     font-size: 20px;
+     font-size: 15px;
     font-weight: normal;
     line-height: 38px; margin: 0;
  }
@@ -23,6 +23,10 @@ th{color: #7c795d;
     box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
   }
 
-  button{
-      background-color:#4ca973; 
-  }
+  button {
+    background-color:#4ca973;
+    color: #ffffff;
+    font-family: 'Trocchi', serif;
+     font-size: 15px;
+    font-weight: normal;
+ margin: 0; }
