--- a/front-end/src/app/admin/units/units.component.html
+++ b/front-end/src/app/admin/units/units.component.html
@@ -3,14 +3,14 @@
   <br>
   <form class="form-inline">
     <div class="form-group">
-      <label class="sr-only" for="inputEmail">Email</label>
-      <input type="text" class="form-control" id="inputEmail" placeholder="Enter Unit code">
+      <label class="sr-only" >Email</label>
+      <input type="text" class="form-control" name="unitCode" placeholder="Enter Unit code" #unitCode>
     </div>
     <div class="form-group">
-      <label class="sr-only" for="inputPassword">Password</label>
-      <input type="text" class="form-control" id="inputPassword" placeholder="Enter Unit Name">
+      <label class="sr-only">Password</label>
+      <input type="text" class="form-control" name="unitName" placeholder="Enter Unit Name" #unitName>
     </div>
-    <button type="submit" class="btn btn-success">Add Unit</button>
+    <button type="submit" class="btn btn-success" (click)="addUnit(unitCode.value,unitName.value)">Add Unit</button>
   </form>
   <br>
   <br>
