--- a/front-end/src/app/surveynav/surveynav.component.html
+++ b/front-end/src/app/surveynav/surveynav.component.html
@@ -18,7 +18,7 @@
         <ul class="nav navbar-nav">
         </ul>
         <ul class="nav navbar-nav navbar-right">
-          <li><a style="color: white" routerLink="/login">Logout</a></li>
+          <li><a style="color: white" routerLink="#">Logout</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
