adding response to the database

--- a/front-end/src/app/admin/academicyears/academicyears.component.html
+++ b/front-end/src/app/admin/academicyears/academicyears.component.html
@@ -1,15 +1,14 @@
 <app-navbar></app-navbar>
 <div class="container">
-        <br>
-        <form class="form-inline">
-          <div class="form-group">
-            <label class="sr-only" for="inputText"> Id</label>
-            <input type="text" class="form-control" placeholder="Eg 2018/2019">
-          </div>
-          <button type="submit" class="btn btn-success">Add Academic Year</button>
-        </form>
-        <br>
-        <br>
-</div>
+  <br>
+  <form class="form-inline" (ngSubmit)="addAcademicYear()"  #addform="ngForm">
+    <div class="form-group">
+      <label class="sr-only" >Academic Year</label>
+      <input type="text" class="form-control" name="academicYear" [(ngModel)]="model.academicYear"  required #academicYear="ngModel" placeholder="Eg 2018/2019" #academicYear>
+    </div>
+    <button type="submit" class="btn btn-success" [disabled]="!addform.form.valid">Add Academic Year</button>
+  </form>
+  <br>
+  <br>
+  </div>
 <hr>
-<div class="container"></div>
