--- a/front-end/src/app/admin/navbar/navbar.component.html
+++ b/front-end/src/app/admin/navbar/navbar.component.html
@@ -22,7 +22,7 @@
         <li><a style="color: white" routerLink="/units">Add Unit</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a style="color: white" routerLink="/login">Logout</a></li>
+        <li><a style="color: white" routerLink="/staff">Logout</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
