--- a/front-end/src/app/admin/programs/programs.component.html
+++ b/front-end/src/app/admin/programs/programs.component.html
@@ -1,17 +1,14 @@
 <app-navbar></app-navbar>
 <div class="container">
-        <br>
-        <form class="form-inline">
-          <div class="form-group">
-            <label class="sr-only" for="inputText">program Id</label>
-            <input type="text" class="form-control" id="inputEmail" placeholder="Enter program ID">
-          </div>
-          <div class="form-group">
-            <label class="sr-only" for="inputText">program Name</label>
-            <input type="text" class="form-control" id="inputPassword" placeholder="Enter program Name">
-          </div>
-          <button type="submit" class="btn btn-success">Add Program</button>
-        </form>
-        <br><br>
-</div>
+  <br>
+  <form class="form-inline" (ngSubmit)="addProgram()"  #addform="ngForm">
+    <div class="form-group">
+      <label class="sr-only" >Program Name</label>
+      <input type="text" class="form-control" name="programName" [(ngModel)]="model.programName"  required #programName="ngModel" placeholder="Enter Program Name" #ProgramName>
+    </div>
+    <button type="submit" class="btn btn-success" [disabled]="!addform.form.valid">Add Program</button>
+  </form>
+  <br>
+  <br>
+  </div>
 <hr>
