--- a/front-end/src/app/admin/units/units.component.html
+++ b/front-end/src/app/admin/units/units.component.html
@@ -1,16 +1,16 @@
 <app-navbar></app-navbar>
 <div class="container">
   <br>
-  <form class="form-inline">
+  <form class="form-inline" (ngSubmit)="addUnit()"  #addform="ngForm">
     <div class="form-group">
-      <label class="sr-only" >Email</label>
-      <input type="text" class="form-control" name="unitCode" placeholder="Enter Unit code" #unitCode>
+      <label class="sr-only" >Unit Code</label>
+      <input type="text" class="form-control" name="unitCode" [(ngModel)]="model.unitCode"  required #unitName="ngModel" placeholder="Enter Unit code" #unitCode>
     </div>
     <div class="form-group">
-      <label class="sr-only">Password</label>
-      <input type="text" class="form-control" name="unitName" placeholder="Enter Unit Name" #unitName>
+      <label class="sr-only">Unit Name</label>
+      <input type="text" class="form-control" name="unitName"[(ngModel)]="model.unitName" required #unitName="ngModel" placeholder="Enter Unit Name" #unitName>
     </div>
-    <button type="submit" class="btn btn-success" (click)="addUnit(unitCode.value,unitName.value)">Add Unit</button>
+    <button type="submit" class="btn btn-success" [disabled]="!addform.form.valid">Add Unit</button>
   </form>
   <br>
   <br>
