--- a/front-end/src/app/admin/departments/departments.component.html
+++ b/front-end/src/app/admin/departments/departments.component.html
@@ -2,11 +2,11 @@
 <div class="container">
   <br>
   <form class="form-inline" (ngSubmit)="addDepartment()" #addform="ngForm">
-    <!-- <div class="form-group">
+    <div class="form-group">
       <label class="sr-only">Department Id</label>
-      <input type="text" class="form-control" name="departmentid" [(ngModel)]="model.departmentid" required #departmentId="ngModel"
+      <input type="text" class="form-control" name="departmentId" [(ngModel)]="model.departmentId" required #departmentId="ngModel"
         placeholder="Enter Department Id" #departmentId>
-    </div> -->
+    </div>
 
     <div class="form-group">
       <label class="sr-only">Department Name</label>
