--- a/front-end/src/app/admin/units/units.component.html
+++ b/front-end/src/app/admin/units/units.component.html
@@ -1,45 +1,58 @@
 <app-navbar></app-navbar>
 <div class="container">
   <br>
-  <form class="form-inline" (ngSubmit)="addUnit()"  #addform="ngForm">
+  <form class="form-inline" (ngSubmit)="addUnit()" #addform="ngForm">
     <div class="form-group">
-      <label class="sr-only" >Unit Code</label>
-      <input type="text" class="form-control" name="unitCode" [(ngModel)]="model.unitCode"  required #unitName="ngModel" placeholder="Enter Unit code" #unitCode>
+      <label class="sr-only">Program Code</label>
+      <select class="form-control" name="programId" [(ngModel)]="model.programId" required #programId="ngModel" placeholder="Enter program code"
+        #programId>
+        <option *ngFor="let program of programs" [value]="program.programId">{{program.programName}}</option>
+      </select>
+    </div>
+    <div class="form-group">
+      <label class="sr-only">Unit Code</label>
+      <input type="text" class="form-control" name="unitCode" [(ngModel)]="model.unitCode" required #unitName="ngModel" placeholder="Enter Unit code"
+        #unitCode>
     </div>
     <div class="form-group">
       <label class="sr-only">Unit Name</label>
-      <input type="text" class="form-control" name="unitName"[(ngModel)]="model.unitName" required #unitName="ngModel" placeholder="Enter Unit Name" #unitName>
+      <input type="text" class="form-control" name="unitName" [(ngModel)]="model.unitName" required #unitName="ngModel" placeholder="Enter Unit Name"
+        #unitName>
     </div>
     <button type="submit" class="btn btn-success" [disabled]="!addform.form.valid">Add Unit</button>
   </form>
   <br>
   <br>
-  </div>
-  <hr>
+</div>
+<hr>
 <div class="container">
   <br>
   <h3>Registred units</h3>
-    <table class="table table-striped table-bordered" *ngIf="units">
-      <thead>
-        <tr>
-          <th>Unit Code</th>
-          <th>Unit Name</th>
-          <th>Action</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let unit of units ">
-          <td>{{unit.unitCode}}</td>
-          <td>{{unit.unitName}}</td>
-          <td>
-            <a routerLink="/units" style="color:blue;">Edit</a>
-          </td>
-          <td>
-            <a routerLink="/units" style="color:red;">Delete</a>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+  <table class="table table-striped table-bordered" *ngIf="units">
+    <thead>
+      <tr>
+        <th>Unit Code</th>
+        <th>Unit Name</th>
+        <th>Action</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let unit of units ">
+        <td>{{unit.unitCode}}</td>
+        <td>{{unit.unitName}}</td>
+        <td>
+          <a routerLink="/units" style="color:blue;">Edit</a>
+        </td>
+        <td>
+          <a (click)='deleteUnit(unit.unitCode)' type="button" style="color: red" aria-label="Left Align">
+ 
+            <!-- <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> -->delete
+             
+          </a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
 </div>
