--- a/front-end/src/app/admin/navbar/navbar.component.html
+++ b/front-end/src/app/admin/navbar/navbar.component.html
@@ -16,10 +16,9 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li ><a style="color: white" routerLink="/departments">Add Department</a></li>
-        <li><a style="color: white" routerLink="/programs">Add program</a></li>
-        <li><a style="color: white" routerLink="/academicYears">Add Academic year</a></li>
-        <li><a style="color: white" routerLink="/units">Add Unit</a></li>
+        <li ><a style="color: white" routerLink="/departments">Departments</a></li>
+        <li><a style="color: white" routerLink="/programs">Programs</a></li>
+        <li><a style="color: white" routerLink="/units">Units</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a style="color: white" routerLink="/staff">Logout</a></li>
