added delete endpoints

--- a/front-end/src/app/admin/programs/programs.component.html
+++ b/front-end/src/app/admin/programs/programs.component.html
@@ -25,3 +25,8 @@
   <br>
 </div>
 <hr>
+<div class="container">
+  <ol>
+    <li *ngFor="let program of programs">{{program.programName}}</li>
+  </ol>
+</div>
